tests/fixtures/positive/code-style/ProhibitPrettierIgnore.cls
// Valid: Regular comments are allowed
public class Example {
	public void method1() {
		String x = 'test';
	}

	// Valid: Another regular comment
	public void method2() {
		Integer count = 5;
	}

	// Valid: Multi-line comment
	// This is a multi-line comment
	// that spans multiple lines
	public void method3() {
		Boolean flag = true;
	}

	// Valid: Comment with different text
	// eslint-disable-next-line
	public void method4() {
		String name = 'test';
	}
}
